--- a/product-info.html
+++ b/product-info.html
@@ -11,6 +11,7 @@
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="css/styles.css" rel="stylesheet">
   <link rel="stylesheet" href="css/productsstyle.css">
+
 </head>
 
 <body>
@@ -32,6 +33,12 @@
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
           <li><button class="dropdown-item" id="logoutBtnMobile">Cerrar sesión</button></li>
+          <li style="position: relative;">
+              <span class="badgeCartMobile" id="cartItemCountMobile"></span>
+              <a class="dropdown-item" href="cart.html">
+                🛒 Ir al carrito
+              </a>
+            </li>
         </ul>
       </li>
       <div class="collapse navbar-collapse" id="navbarNav">
@@ -41,17 +48,34 @@
               <i class="fas fa-moon" id="theme-icon"></i>
             </button>
           </li>
-          <li class="nav-item"><a class="nav-link" href="index.html">Inicio</a></li>
-          <li class="nav-item"><a class="nav-link" href="categories.html">Categorías</a></li>
-          <li class="nav-item"><a class="nav-link" href="sell.html">Vender</a></li>
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="categories.html">Categorías</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="sell.html">Vender</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="my-profile.html">Perfil</a>
           </li>
+          
+          
           <li class="nav-item dropdown" id="userDropdownContainer" style="display:none;">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown"
-              aria-expanded="false"><span id="userName"></span><img id="navbarProfileImg" class="navbar-profile-img d-inline-block align-middle" src="img/img_perfil.png" alt="Perfil" style="display:none;"></a>
+              aria-expanded="false">
+              <span id="userName"></span>
+              <img id="navbarProfileImg" class="navbar-profile-img d-inline-block align-middle" src="img/img_perfil.png" alt="Perfil" style="display:none;">
+            </a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userDropdown">
               <li><button class="dropdown-item" id="logoutBtn">Cerrar sesión</button></li>
+              <li style="position: relative;">
+                <span class="badgeCart" id="cartItemCount"></span>
+                <a class="dropdown-item" href="cart.html" style="position: relative;">
+                  🛒 Ir al carrito
+                </a>
+              </li>
             </ul>
           </li>
         </ul>
@@ -156,7 +180,10 @@
   <!-- SPINNER -->
   <div id="spinner-wrapper">
     <div class="lds-ring">
-      <div></div><div></div><div></div><div></div>
+      <div></div>
+      <div></div>
+      <div></div>
+      <div></div>
     </div>
   </div>
 
